# network-scanner-mcp

./: README.md  network-scanner-daemon.service  pyproject.toml
data/: alert_history.json  known_devices.json
src/network_scanner_mcp/: __init__.py  alert_daemon.py  scanner.py  server.py  utils.py
tests/: __init__.py  conftest.py
