[project]
name = "network-scanner-mcp"
version = "0.1.0"
description = "Network device scanner MCP for cluster environmental awareness"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "scapy>=2.5.0",
    "mac-vendor-lookup>=0.1.12",
    "python-nmap>=0.7.1",
    "flask>=3.0.0",
    "aiohttp>=3.9.0",
    "netifaces>=0.11.0",
]

[project.scripts]
network-scanner-mcp = "network_scanner_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/network_scanner_mcp"]
